# whatsapp-utility

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  requirements.txt
wassap/: __init__.py  parser.py  static.py
wassap/tests/: data_factory.py  test_parser.py
