[project]
name = "wassap"
version = "0.1.0"
description = "Python library for NLP analytics on whatsapp messages"
authors = [
    "nicelgueta"
]
license = "MIT"
readme = "README.md"
python = "^3.9"

keywords = ["nlp", "whatsapp", "parser", "pandas"]

classifiers = [
    "Topic :: Software Development"
]


[build-system]
requires = [
    "setuptools >= 58.1.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | setup.py  
)
'''
